<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >


        <LinearLayout
            style="@style/question_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/question_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_one" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="16dp">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/question_one_opt1"/>

                <RadioButton android:id="@+id/question_one_opt2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/question_one_opt2" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/question_one_opt3" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/question_one_opt4" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/question_one_opt5" />

            </RadioGroup>


        </LinearLayout>


        <LinearLayout
            style="@style/question_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/question_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_two"
/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="16dp">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/question_two_opt1"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/question_two_opt2" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/question_two_opt3" />

                <RadioButton android:id="@+id/question_two_opt4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/question_two_opt4" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/question_two_opt5" />

            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            style="@style/question_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/question_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_three" />

            <EditText android:id="@+id/question_three_answer"
                style="@style/question_text_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_three_tip"/>


        </LinearLayout>

        <LinearLayout
            style="@style/question_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/question_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_four" />

            <EditText android:id="@+id/question_four_answer"
                style="@style/question_text_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_four_tip" />


        </LinearLayout>

        <!--
            Questão 5
         -->
        <LinearLayout
            style="@style/question_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/question_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_five" />

            <CheckBox android:id="@+id/question_five_opt1"
                style="@style/question_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_five_opt1"/>]

            <CheckBox android:id="@+id/question_five_opt2"
                style="@style/question_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_five_opt2"/>

            <CheckBox android:id="@+id/question_five_opt3"
                style="@style/question_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_five_opt3"/>

            <CheckBox android:id="@+id/question_five_opt4"
                style="@style/question_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_five_opt4"/>

            <CheckBox android:id="@+id/question_five_opt5"
                style="@style/question_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_five_opt5"/>

        </LinearLayout>

        <!--
            Questão 6
         -->
        <LinearLayout
            style="@style/question_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/question_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_six" />

            <CheckBox android:id="@+id/question_six_opt1"
                style="@style/question_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_six_opt1"/>]

            <CheckBox android:id="@+id/question_six_opt2"
                style="@style/question_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_six_opt2"/>

            <CheckBox android:id="@+id/question_six_opt3"
                style="@style/question_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_six_opt3"/>

            <CheckBox android:id="@+id/question_six_opt4"
                style="@style/question_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_six_opt4"/>

            <CheckBox android:id="@+id/question_six_opt5"
                style="@style/question_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_six_opt5"/>

            <CheckBox android:id="@+id/question_six_opt6"
                style="@style/question_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_six_opt6"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorDivider" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccent"
            android:padding="8dp"
            android:text="@string/check_answers_button"
            android:textColor="@color/colorTextIcons"
            android:onClick="checkAnswers"/>


    </LinearLayout>


</ScrollView>